@@ -105,7 +105,7 @@ main (int argc, char *const *argv)
   errorCount += testMultithreadedGet (0);
   errorCount += testMultithreadedPoolGet (0);
   errorCount += testExternalGet ();
-#if !WINDOWS
+#ifndef WINDOWS
   errorCount += testInternalGet (MHD_USE_POLL);
   errorCount += testMultithreadedGet (MHD_USE_POLL);
   errorCount += testMultithreadedPoolGet (MHD_USE_POLL);
